--- a/Arena/templates/management/schedule_modal.html
+++ b/Arena/templates/management/schedule_modal.html
@@ -23,7 +23,7 @@
         <div class="row" id="repeatScheduleSection">
             <div class="col-sm-3">
                 <label for="scheduleEveryMinutes">Every</label>
-                <input id="scheduleEveryMinutes" type="number" style="max-width: 100%; padding-left: 0.5em" value="0" autocomplete="off">
+                <input id="scheduleEveryMinutes" type="number" style="max-width: 100%; padding-left: 0.5em" value="0">
             </div>
             <div class="col-sm-7">
                 <label for="scheduleEveryMinutes">Until</label>
