--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -43,13 +43,13 @@
             </div>
             <div id="collapse{{i}}" class="collapse in" aria-labelledby="heading{{i}}" data-parent="#accordion">
                 <div class="card-body">
-                    <div class="form-group row pr-3">
+                    <div class="form-group row pr-3 trial-options{{i}}">
                         <label for="experimentNumTrials{{i}}" class="col col-form-label">Number of Trials</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="experimentNumTrials{{i}}" value="5" required>
                         </div>
                     </div>
-                    <div class="form-group row pr-3">
+                    <div class="form-group row pr-3 trial-options{{i}}">
                         <label for="experimentTrialDuration{{i}}" class="col col-form-label">Trial Duration
                             [sec]</label>
                         <div class="col-sm-5">
@@ -57,7 +57,7 @@
                                    required>
                         </div>
                     </div>
-                    <div class="form-group row pr-3">
+                    <div class="form-group row pr-3 trial-options{{i}}">
                         <label for="experimentITI{{i}}" class="col col-form-label">Inter Trial Interval [sec]</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="experimentITI{{i}}" value="20" required>
@@ -73,6 +73,18 @@
                             </select>
                         </div>
                     </div>
+
+                    <div class="form-group row pr-3 blank-options{{i}}">
+                        <label for="blankRecSelect{{i}}" class="col col-form-label">Recording Type</label>
+                        <div class="col">
+                            <select id="blankRecSelect{{i}}" class="form-control col">
+                                {% for blank_rec in blank_rec_types %}
+                                <option value="{{blank_rec}}">{{blank_rec}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+
                     <div class="form-group row pr-3 bugs-options{{i}}">
                         <label for="movementTypeSelect{{i}}" class="col col-form-label">Movement Type</label>
                         <div class="col">
@@ -83,16 +95,19 @@
                             </select>
                         </div>
                     </div>
+
                     <div class="form-group row pr-3 bugs-options{{i}}" id="bugSpeedDiv{{i}}">
                         <label for="bugSpeed{{i}}" class="col col-form-label">Bug Speed [cm/s]</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="4">
                         </div>
                     </div >
+
                     <div class="row ml-4 mt-3 form-group row pr-3 bugs-options{{i}}">
                         <input class="form-check-input" type="checkbox" id="isDefaultBugSize{{i}}" checked>
                         <label class="form-check-label" for="isDefaultBugSize{{i}}">Use Default Bug Sizes</label>
                     </div>
+
                     <div class="form-group row pr-3 bugs-options{{i}}" id="bugSizeDiv{{i}}" style="display: none;">
                         <label for="bugSize{{i}}" class="col col-form-label">Bug Size:</label>
                         <div class="col-sm-5">
@@ -119,6 +134,13 @@
                                 <option value="{{psychoFile}}">{{psychoFile}}</option>
                                 {% endfor %}
                             </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3">
+                        <label for="block-notes{{i}}" class="col col-form-label">Notes:</label>
+                        <div class="col">
+                            <textarea id="block-notes{{i}}" rows="4" autocomplete="off"></textarea>
                         </div>
                     </div>
 
