--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -51,6 +51,9 @@
     <div class="row mb-2">
         <button id="restartArena" type="button" class="btn btn-sm btn-primary mx-auto">Restart Arena</button>
     </div>
+    <div class="row mb-2">
+        <button id="animalSummary" type="button" class="btn btn-sm btn-primary mx-auto">Animal Summary</button>
+    </div>
 
 </div>
 
