--- a/Arena/templates/management/animal_id.html
+++ b/Arena/templates/management/animal_id.html
@@ -8,6 +8,7 @@
         <select id="animalSex" class="form-control">
             <option value="male">male</option>
             <option value="female">female</option>
+            <option value="unknown">unknown</option>
         </select>
     </div>
     <div class="col-sm-2" style="padding: 1%;">
