--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -27,7 +27,7 @@
 <body>
 <div class="row">
     <div class="col-xl-7">
-        <h1 class="p-2" style="font-size: 4em; text-align: center; margin-bottom: 0; padding-bottom: 0 !important;">Pogona Pursuit</h1>
+        <h1 class="p-2" style="font-size: 4em; text-align: center; margin-bottom: 0; padding-bottom: 0 !important;">PreyTouch</h1>
         <h4 style="text-align: center; margin-bottom: 1em">{{arena_name}}</h4>
         <div class="row top-border bottom-border" id="all-panels" style="padding-bottom: 0">
             <div class="col-md-5 control-panel right-border" style="padding: 0">
