--- a/Arena/templates/management/footer.html
+++ b/Arena/templates/management/footer.html
@@ -1,4 +1,4 @@
 <div id="footer">
-    <img src="{{ url_for('static', filename='pogona_white_background.jpg') }}" alt="">
-    <h4>Written by Reggev Eyal</h4>
+{#    <img src="{{ url_for('static', filename='pogona_white_background.jpg') }}" alt="">#}
+    <h6>Written by Reggev Eyal</h6>
 </div>
