--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -115,6 +115,13 @@
                         </div>
                     </div>
 
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="holesHeightDiv{{i}}" style="display: none;">
+                        <label for="holesHeight{{i}}" class="col col-form-label">Holes Height:</label>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="holesHeight{{i}}" min="0" max="1000">
+                        </div>
+                    </div>
+
                     <div class="form-group row pr-3 media-options{{i}}" style="display: none">
                         <label for="media-url{{i}}" class="col col-form-label">Media File:</label>
                         <div class="col">
